add the possiblity to add videos alongside images but i needed to modify the php.ini max_filesize and post_maw_size to be able to upload big files
